src/assets/scss/components/_registerAccountModal.scss
register-account-modal:has(sign-up-modal) {
  display: block;
  line-height: 1.2em;

  a {
    cursor: pointer;
  }

  .modal-body {
    padding: 30px;
  }

  .modal-header {
    padding: 30px;
    background-color: #EBECEC;
  }

  .signup-header {
    text-align: center;
  }
}

.modal-dialog:has(register-account-modal sign-in-modal) {
  width: calc(min(100vw, 400px) - 20px);

  @media (min-width: 992px) {
    &:has(.user-state[data-new-user=true]) {
      width: 900px;
    }
  }
}

.modal-content:has(register-account-modal sign-in-modal) {
  background-color: transparent;

  /* Override .modal-content Bootstrap styles */
  border: unset;
  border-radius: unset;
  @include box-shadow(none);
}

register-account-modal:has(sign-in-modal) {
  @media (min-width: 992px) {
    .user-state {
      display: flex;
      gap: 1rem;
    }
  }

  .modal-header {
    width: 450px;
    background-color: #f5f5f5;

    /* Override ".modal-content.give-modal-content .modal-header" padding-top styles */
    .modal-content.give-modal-content & {
      padding: 0;
    }

    @media (max-width: 992px) {
      width: auto;
      margin-bottom: 1rem;

      /* Position the image and the info blocks on top of each other */
      .header-container {
        display: grid;

        > * {
          grid-area: 1 / 1;
        }
      }

      .header-image {
        height: 100%;
        object-fit: cover;
        object-position: 50% 25%;
      }
    }

    .cru-info {
      display: flex;
      justify-content: space-between;
      gap: 2rem;
      padding: 1rem 2rem;
      background-color: white;
      border-bottom: 2px solid $colorCru-gold;

      @media (max-width: 992px) {
        height: 100%;
        flex-direction: column;
        align-items: center;
        gap: unset;
        border-bottom: unset;
        color: white;
        /* Darken .header-image for better contrast */
        background-color: rgba(0, 0, 0, 0.5);

        img {
          /* Make the Cru logo white */
          filter: brightness(0) invert(1);
        }
      }

      .tagline {
        &.mobile {
          display: none;
        }

        @media (max-width: 992px) {
          &.mobile {
            display: unset;
          }

          &.desktop {
            display: none;
          }
        }
      }

      img {
        width: auto;
        /* Override global styles */
        max-width: unset;
        height: $modal-line-height * 2;
      }
    }

    .benefits {
      display: flex;
      flex-direction: column;
      gap: 1rem;
      padding: 2rem;

      @media (max-width: 992px) {
        display: none;
      }

      /* Override global styles */
      h2 {
        margin-bottom: 0;
      }
    }

    .benefit {
      font-weight: bold;
    }

    .okta-info {
      display: flex;
      align-items: end;
      text-align: center;

      p {
        flex: 1;
        /* Makes it easier to align the baseline of the text with the bottom of the image */
        line-height: 1em;
      }

      img {
        height: 1.5rem;
      }
    }
  }

  .user-state[data-new-user=false] {
    .modal-header {
      width: auto;
    }

    .new-user-info {
      display: none;
    }
  }

  .modal-header, .inner-modal {
    background-color: white;
    border-radius: 5px;
    overflow: hidden;
  }

  .inner-modal {
    flex: 1;
  }

  @media (max-width: 992px) {
    &:has(.user-state[data-new-user=false]) {
      /* Because the .modal-hidden container is empty for returning users, the close button needs to be moved */

      .modal-content.give-modal-content & button.close {
        /* Move the close button inside the modal body */
        top: 25px;
      }

      .inner-modal {
        /* Make space for the close button in the modal body */
        padding-top: 25px;
      }
    }
  }

  .signup-header {
    text-align: center;
  }
}

register-account-modal:has(contact-info-modal) {
  .modal-header {
    text-align: center;
    width: 100%;

    .paragraph {
      max-width: 500px;
      margin-inline: auto;
    }
  }

  @media (min-width: 991px) {
    contact-info-modal form {
      display: grid;
      grid-template: 1fr auto / auto 320px;
      column-gap: 20px;

      .name {
        grid-column: 1;
        grid-row: 1;
      }
      .address {
        grid-column: 2;
        grid-row: 1 / 3;
      }
      .contact-info {
        grid-column: 1;
        grid-row: 2;
      }
      }
  }
}

register-account-modal {
  .modal-header h3 {
    text-align: center;
  }

  .inner-modal > .modal-body {
    height: 140px;
  }
}

